# find_abroad

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: ai.py  applications.py  auth.py  consultations.py  documents.py  health.py  leads.py  lenders.py  router.py  scholarships.py  universities.py  users.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/domain/: __init__.py
backend/app/middleware/: auth.py
backend/app/migrations/: env.py  script.py.mako
backend/app/migrations/versions/: 0001_initial_schema.py
backend/app/models/: __init__.py  application.py  base.py  consultation.py  document.py  lead.py  lender.py  scholarship.py  university.py  user.py
backend/app/schemas/: application.py  common.py  consultation.py  document.py  lead.py  lender.py  scholarship.py  university.py  user.py
backend/app/services/: ai_service.py  lead_service.py  loan_service.py  user_service.py
backend/seeds/: README.md  __init__.py  add_rows.py  seed.py
backend/seeds/data/: lenders.csv  programs.csv  scholarships.csv  universities.csv
backend/tests/: conftest.py
backend/tests/unit/: test_security.py
frontend/: .env.local  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  mui-theme-registry.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(public)/: layout.tsx  page.tsx
frontend/app/auth/: layout.tsx
frontend/components/forms/: consultation-booking-form.tsx  contact-form.tsx  loan-eligibility-wizard.tsx  login-form.tsx  register-form.tsx  student-profile-form.tsx
frontend/components/layout/: dashboard-header.tsx  dashboard-sidebar.tsx  footer.module.css  footer.tsx  navbar.tsx  providers.tsx  theme-provider.tsx  whatsapp-button.tsx
frontend/components/sections/: about-page-client.tsx  application-tracker-client.tsx  consultation-page-client.tsx  consultations-client.tsx  course-finder-client.tsx  cta.tsx  destinations.tsx  document-vault-client.tsx  emi-calculator-client.tsx  features.tsx  hero.tsx  lead-capture-popup.tsx  loan-tool-teaser.tsx  loans-page-client.tsx  manifesto.tsx  (+6 more)
frontend/hooks/: use-auth.ts  use-lenders.ts  use-scholarships.ts  use-universities.ts
frontend/lib/: api.ts  utils.ts
nginx/: listmonk_config.toml  nginx.conf
nginx/conf.d/: find-abroad.conf
scripts/: setup.sh
scripts/hooks/: check_env.sh  validate_migrations.py
(+32 files in other folders)
