[project]
name = "find-abroad"
version = "0.1.0"
description = "Production-ready study abroad consultancy platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.uv.workspace]
members = ["backend"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.7.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=25.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "ANN", # flake8-annotations
]
ignore = ["ANN101", "ANN102", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "--cov=backend/app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["backend/app"]
omit = ["*/migrations/*", "*/tests/*"]
