[project]
name = "find-abroad-backend"
version = "0.1.0"
description = "Find Abroad FastAPI backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pydantic[email]>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=5.0.4",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "aiofiles>=23.2.1",
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=2.5.0",
    "python-slugify>=8.0.4",
    # celery kept for future background tasks (email, CRM sync)
    "celery>=5.4.0",
    # meilisearch for full-text search (future integration)
    "meilisearch-python-sdk>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
